# cn-bis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile.local  docker-compose.local.yaml
project/app/: factory.py  main.py
project/app/api/v1/: route.py  station.py
project/app/api/v2/: route.py
project/core/: config.py
project/crud/: __init__.py  crud_address.py  crud_bus.py
project/dependencies/: database.py
project/helpers/: response.py
project/models/: __init__.py  address.py  bus.py
project/schemas/: __init__.py  bus.py  default.py
project/script/: loader.py
sql/: init.sql
